Clean up : Adding Readme

--- a/sample/index.html
+++ b/sample/index.html
@@ -5,11 +5,14 @@
     <script type="module" src="./setup.js" defer></script>
 </head>
 <body>
-        
+  <script
+  type="text/javascript"
+  src="http://cdn.jsdelivr.net/gh/pixelbin-io/media-library-widget/dist/bundle.js"
+></script>  
 
-    <h1>Implementing the Media Library Widget in HTML with no iframe</h1>
+    <h1>Pixelbin.io Media Library</h1>
     <p>
-      Please provide your <i>cloud_name</i> and <i>api_key</i> in the Media
+      Please provide your <i>cloud_name</i> in the Media
       Library Widget script.
     </p>
     <button id="open-btn">Select Image or Video</button>
